--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,10 @@
 <IfModule mod_rewrite.c>
-    SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
-    RewriteCond %{HTTP:Authorization} ^(.*)
-    RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
+    Options -Indexes
+	RewriteEngine On
+   	RewriteCond %{HTTP_HOST} ^www\. [NC]
+	RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$ [NC]
+	RewriteRule ^ http://%1%{REQUEST_URI} [L,NE,R=301]
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteCond %{REQUEST_FILENAME} !-d
+	# RewriteRule ^(.*)$ index.php?/$1 [L]
 </IfModule>
